--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loginapp",
+  "name": "microFacebook",
   "version": "1.0.0",
   "description": "Simple authentication system",
   "main": "app.js",
@@ -23,6 +23,7 @@
     "mongoose": "*",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "socket.io": "2.0.1"
   }
 }
